# AntiVoiceTgBotUserver

./: .clang-format  .clangd  .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
postgresql/data/: initial_data.sql
src/: main.cpp
telegram_api/: CMakeLists.txt
telegram_api/include/: bot_api.hpp  errors.hpp
telegram_api/include/tg/: async_dispatcher.hpp  bot_api.hpp  errors.hpp
telegram_api/include/tg/types/: accepted_gift_types.hpp  affiliate_info.hpp  animation.hpp  audio.hpp  background_fill.hpp  background_fill_freeform_gradient.hpp  background_fill_gradient.hpp  background_fill_solid.hpp  background_type.hpp  background_type_chat_theme.hpp  background_type_fill.hpp  background_type_pattern.hpp  background_type_wallpaper.hpp  birthdate.hpp  bot_command.hpp  bot_command_scope.hpp  bot_command_scope_all_chat_administrators.hpp  bot_command_scope_all_group_chats.hpp  bot_command_scope_all_private_chats.hpp  bot_command_scope_chat.hpp  bot_command_scope_chat_administrators.hpp  bot_command_scope_chat_member.hpp  bot_command_scope_default.hpp  bot_description.hpp  bot_name.hpp  bot_short_description.hpp  business_bot_rights.hpp  business_connection.hpp  business_intro.hpp  business_location.hpp  business_messages_deleted.hpp  business_opening_hours.hpp  business_opening_hours_interval.hpp  callback_game.hpp  callback_query.hpp  chat.hpp  chat_administrator_rights.hpp  chat_background.hpp  chat_boost.hpp  chat_boost_added.hpp  (+246 more)
telegram_api/include/types/: accepted_gift_types.hpp  affiliate_info.hpp  animation.hpp  audio.hpp  background_fill.hpp  background_fill_freeform_gradient.hpp  background_fill_gradient.hpp  background_fill_solid.hpp  background_type.hpp  background_type_chat_theme.hpp  background_type_fill.hpp  background_type_pattern.hpp  background_type_wallpaper.hpp  birthdate.hpp  bot_command.hpp  bot_command_scope.hpp  bot_command_scope_all_chat_administrators.hpp  bot_command_scope_all_group_chats.hpp  bot_command_scope_all_private_chats.hpp  bot_command_scope_chat.hpp  bot_command_scope_chat_administrators.hpp  bot_command_scope_chat_member.hpp  bot_command_scope_default.hpp  bot_description.hpp  bot_name.hpp  bot_short_description.hpp  business_bot_rights.hpp  business_connection.hpp  business_intro.hpp  business_location.hpp  business_messages_deleted.hpp  business_opening_hours.hpp  business_opening_hours_interval.hpp  callback_game.hpp  callback_query.hpp  chat.hpp  chat_administrator_rights.hpp  chat_background.hpp  chat_boost.hpp  chat_boost_added.hpp  (+239 more)
telegram_api/src/: bot_api.cpp
telegram_api/src/internal/: json_builder.hpp  json_client.cpp  json_client.hpp  type_traits.hpp
telegram_api/src/methods/: bot.cpp  business.cpp  callback.cpp  chat.cpp  forum.cpp  game.cpp  gift.cpp  inline.cpp  media.cpp  message.cpp  passport.cpp  payment.cpp  sticker.cpp  update.cpp  user.cpp
telegram_api/src/parse/: accepted_gift_types.cpp  affiliate_info.cpp  animation.cpp  audio.cpp  background_fill.cpp  background_fill_freeform_gradient.cpp  background_fill_gradient.cpp  background_fill_solid.cpp  background_type.cpp  background_type_chat_theme.cpp  background_type_fill.cpp  background_type_pattern.cpp  background_type_wallpaper.cpp  birthdate.cpp  bot_command.cpp  bot_command_scope.cpp  bot_command_scope_all_chat_administrators.cpp  bot_command_scope_all_group_chats.cpp  bot_command_scope_all_private_chats.cpp  bot_command_scope_chat.cpp  bot_command_scope_chat_administrators.cpp  bot_command_scope_chat_member.cpp  bot_command_scope_default.cpp  bot_description.cpp  bot_name.cpp  bot_short_description.cpp  business_bot_rights.cpp  business_connection.cpp  business_intro.cpp  business_location.cpp  business_messages_deleted.cpp  business_opening_hours.cpp  business_opening_hours_interval.cpp  callback_game.cpp  callback_query.cpp  chat.cpp  chat_administrator_rights.cpp  chat_background.cpp  chat_boost.cpp  chat_boost_added.cpp  (+247 more)
telegram_api/src/types/: accepted_gift_types.cpp  affiliate_info.cpp  animation.cpp  audio.cpp  background_fill.cpp  background_fill_freeform_gradient.cpp  background_fill_gradient.cpp  background_fill_solid.cpp  background_type.cpp  background_type_chat_theme.cpp  background_type_fill.cpp  background_type_pattern.cpp  background_type_wallpaper.cpp  birthdate.cpp  bot_command.cpp  bot_command_scope.cpp  bot_command_scope_all_chat_administrators.cpp  bot_command_scope_all_group_chats.cpp  bot_command_scope_all_private_chats.cpp  bot_command_scope_chat.cpp  bot_command_scope_chat_administrators.cpp  bot_command_scope_chat_member.cpp  bot_command_scope_default.cpp  bot_description.cpp  bot_name.cpp  bot_short_description.cpp  business_bot_rights.cpp  business_connection.cpp  business_intro.cpp  business_location.cpp  business_messages_deleted.cpp  business_opening_hours.cpp  business_opening_hours_interval.cpp  callback_game.cpp  callback_query.cpp  chat.cpp  chat_administrator_rights.cpp  chat_background.cpp  chat_boost.cpp  chat_boost_added.cpp  (+246 more)
tests/: conftest.py  test_postgres.py
(+38 files in other folders)
